--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <a href="https://www.linkedin.com/in/suman-saha-314535219" target="_blank"><img src="link.png" alt="" ></a>
         <a id="git" href="https://github.com/Suman196" target="_blank"><img 
              src="git.png" alt="" ></a>
-        <a id="git" href="https://drive.google.com/file/d/1JtpfNca0eY55PLNN8sIaez-e6kxkI1eu/view?usp=drive_link" target="_blank"><img 
+        <a id="git" href="https://drive.google.com/file/d/191Tg9SA2wGqEHT0JAyaKCJALk_oDwsW_/view?usp=sharing" target="_blank"><img 
                 src="me.png" alt="" ></a>
        
          <a id="git" href="mailto:sumansaha0178@gmail.com"><img 
