--- a/index.html
+++ b/index.html
@@ -254,6 +254,13 @@
             <p id="proj-para"><br> Python, Computer Vision, Machine Learning</p>
 
         </div>
+        <div class="boxes">
+            <a href="https://github.com/Suman196/hand-gesture-mouse-volumebar/blob/main/main.py" target="_blank"><img src="el.jpg" alt="" ></a>
+            <!-- <h4 id="proj-head">Voice Note Maker</h4> -->
+            <strong id="proj-head">E-learning Platform</strong>
+            <p id="proj-para"><br> HTML, CSS, JavaScript, Bootstrap, PHP</p>
+
+        </div>
         <!-- <div class="boxes">
 
         </div>
