--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
         </div>
         <div class="boxes">
-            <a href="https://suman196.github.io/ESchool/" target="_blank"><img src="el.jpg" alt="" ></a>
+            <a href="https://github.com/Suman196/ESchool" target="_blank"><img src="el.jpg" alt="" ></a>
             <!-- <h4 id="proj-head">Voice Note Maker</h4> -->
             <strong id="proj-head">E-learning Platform</strong>
             <p id="proj-para"><br> HTML, CSS, JavaScript, Bootstrap, PHP</p>
