--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <a href="https://github.com/Suman196/ESchool" target="_blank"><img src="el.jpg" alt="" ></a>
             <!-- <h4 id="proj-head">Voice Note Maker</h4> -->
             <strong id="proj-head">E-learning Platform</strong>
-            <p id="proj-para"><br> HTML, CSS, JavaScript, Bootstrap, PHP</p>
+            <p id="proj-para"><br> HTML, CSS, Bootstrap, PHP</p>
 
         </div>
         <!-- <div class="boxes">
